<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.yupiik.gatling</groupId>
  <artifactId>gatling-operator</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Gatling Operator</name>
  <description>Gatling operator to scale benchmarks (injectors) and get asciidoc based reports.</description>

  <modules>
    <module>gatling-operator-controller</module>
    <module>deployment</module>
    <module>documentation</module>
    <module>gatling-cli</module>
    <module>bundlebee-fusion</module>
    <module>bundlebee-alveolus-generic-job</module>
    <module>kubernetes-model</module>
    <module>testing</module>
  </modules>

  <properties>
    <yupiik-fusion.version>1.0.28-SNAPSHOT</yupiik-fusion.version>
    <yupiik-bundlebee.version>1.0.31-SNAPSHOT</yupiik-bundlebee.version>
    <yupiik-tools.version>1.2.5</yupiik-tools.version>
    <yupiik-logging.version>1.0.8</yupiik-logging.version>
    <junit.version>5.13.0-M1</junit.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <image.base>ossyupiik/java:21.0.7@sha256:82b9c52317c9d0ea1033bd022a1a44650583f99cc909ca48bdb771db60da0604</image.base>
    <image.workdir>/opt/yupiik/gatling-operator/${project.artifactId}</image.workdir>
    <image.version>${project.version}</image.version>
    <image.registry />
    <!-- when pushing remotely: -Dimage.registry=docker.io/ for ex -->
    <image.name>${image.registry}yupiik/${project.artifactId}:${image.version}</image.name>
    <image.url>https://yupiik.io</image.url>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.yupiik.logging</groupId>
      <artifactId>yupiik-logging-jul</artifactId>
      <version>${yupiik-logging.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.1.4</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>21</release>
          <encoding>UTF-8</encoding>
          <parameters>true</parameters>
          <proc>full</proc>
          <compilerArgs>
            <compilerArg>-Xlint:unchecked</compilerArg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.3</version>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
          <systemPropertyVariables>
            <java.util.logging.manager>io.yupiik.logging.jul.YupiikLogManager</java.util.logging.manager>
            <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
            <gatling.ssl.useOpenSsl>false</gatling.ssl.useOpenSsl>
            <gatling.data.enableAnalytics>false</gatling.data.enableAnalytics>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <releaseProfiles>release</releaseProfiles>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.6.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>4.0.0-M16</version>
      </plugin>
      <plugin>
        <!--  mvn ossindex:audit -->
        <groupId>org.sonatype.ossindex.maven</groupId>
        <artifactId>ossindex-maven-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <scope>compile,runtime</scope>
          <!-- // exclude false positive for Tomcat 10.1.x -->
          <excludeVulnerabilityIds>CVE-2024-56337</excludeVulnerabilityIds>
        </configuration>
        <executions>
          <execution>
            <id>audit-dependencies</id>
            <goals>
              <goal>audit</goal>
            </goals>
            <phase />
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.yupiik.maven</groupId>
        <artifactId>yupiik-tools-maven-plugin</artifactId>
        <version>${yupiik-tools.version}</version>
      </plugin>
      <plugin>
        <groupId>io.yupiik</groupId>
        <artifactId>bundlebee-maven-plugin</artifactId>
        <version>${yupiik-bundlebee.version}</version>
        <configuration>
          <outputType>FILE</outputType>
          <failOnInvalidDescription>true</failOnInvalidDescription>
          <ignoredPlaceholders>basedir,deployment.environment,bundlebee-base64-file:.*,bundlebee-digest:.*</ignoredPlaceholders>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>templating-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>filter-src</id>
            <goals>
              <goal>filter-sources</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.45.0</version>
        <configuration>
          <java>
            <palantirJavaFormat>
              <version>2.57.0</version>
            </palantirJavaFormat>
            <removeUnusedImports />
            <!-- todo
            <licenseHeader>
              <content>/* (C)$YEAR */</content>
            </licenseHeader>
          -->
          </java>
          <lineEndings>PRESERVE</lineEndings>
          <pom>
            <sortPom>
              <expandEmptyElements>false</expandEmptyElements>
              <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
              <quiet>true</quiet>
            </sortPom>
          </pom>
          <upToDateChecking>
            <enabled>true</enabled>
          </upToDateChecking>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
      <!--
      NOTE: can need -DsendCredentialsOverHttp=true for http registries

      docker (local): mvn package jib:dockerBuild
      remote: mvn package jib:build -Dimage.registry=xxxx/
      -->
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.4.6</version>
        <configuration>
          <containerizingMode>packaged</containerizingMode>
          <from>
            <image>${image.base}</image>
          </from>
          <to>
            <image>${image.name}</image>
          </to>
          <container>
            <mainClass>io.yupiik.fusion.framework.api.main.Launcher</mainClass>
            <appRoot>${image.workdir}</appRoot>
            <workingDirectory>${image.workdir}</workingDirectory>
            <extraClasspath>${image.workdir}/custom/*:${image.workdir}/custom</extraClasspath>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
            <jvmFlags>
              <jvmFlag>-Djava.util.logging.manager=io.yupiik.logging.jul.YupiikLogManager</jvmFlag>
              <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
              <jvmFlag>-Djdk.serialFilter=oracle.sql.converter.*;!*</jvmFlag>
              <jvmFlag>-Djdk.jndi.object.factoriesFilter=!*</jvmFlag>
              <jvmFlag>-Dcom.sun.jndi.ldap.object.trustSerialData=false</jvmFlag>
              <jvmFlag>-Dorg.apache.webbeans.spi.deployer.skipValidations=true</jvmFlag>
              <jvmFlag>-Dapp.build.timestamp=${maven.build.timestamp}</jvmFlag>
              <!-- ensure a kill from k8s is respected -->
              <jvmFlag>-Dfusion.launcher.useHook=true</jvmFlag>
              <!-- let's make it long enough: 2 days -->
              <jvmFlag>-Dbundlebee.awaiter.retryInterval=172800000</jvmFlag>
              <!-- for gatling -->
              <jvmFlag>--add-opens</jvmFlag>
              <jvmFlag>java.base/java.lang=ALL-UNNAMED</jvmFlag>
              <jvmFlag>-Dgatling.ssl.useOpenSsl=false</jvmFlag>
              <jvmFlag>-Dgatling.data.enableAnalytics=false</jvmFlag>
            </jvmFlags>
            <environment>
              <LANG>en_US.UTF-8</LANG>
            </environment>
            <labels>
              <!--
              <org.opencontainers.image.revision>${git.commit.id}</org.opencontainers.image.revision>
              <org.opencontainers.image.ref.name>${git.branch}</org.opencontainers.image.ref.name>
              <org.opencontainers.image.source>${git.remote.origin.url}</org.opencontainers.image.source>
              -->
              <org.opencontainers.image.created>${maven.build.timestamp}</org.opencontainers.image.created>
              <org.opencontainers.image.authors>Yupiik</org.opencontainers.image.authors>
              <org.opencontainers.image.vendor>Yupiik</org.opencontainers.image.vendor>
              <org.opencontainers.image.url>https://yupiik.io/</org.opencontainers.image.url>
              <org.opencontainers.image.documentation>https://yupiik.io</org.opencontainers.image.documentation>
              <org.opencontainers.image.title>${project.name}</org.opencontainers.image.title>
              <org.opencontainers.image.description>${project.description}</org.opencontainers.image.description>
              <org.opencontainers.image.version>${project.version}</org.opencontainers.image.version>
              <com.yupiik.maintainer>Yupiik &lt;support@yupiik.com&gt;</com.yupiik.maintainer>
              <com.yupiik.build-date>${maven.build.timestamp}</com.yupiik.build-date>
            </labels>
          </container>
          <outputPaths>
            <imageJson>${project.build.directory}/jib-image.json</imageJson>
          </outputPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
